--- a/experiment/Color.html
+++ b/experiment/Color.html
@@ -4,7 +4,7 @@
 {{ block content }}
 <p>You have been randomly assigned a color indicating your group in the society.</p>
 <p>In your society there will be 8 Green and 8 Purple participants (including you).</p>
-<p>Colors are purely for the purposes of this study and have no connection to any real world trait</p>
+<p>Colors are purely for the purposes of this study and have no connection to any real world trait.</p>
 <br>
 <p><strong>Your group is {{ color }}</strong></p>
 
