--- a/experiment/Quiz1.html
+++ b/experiment/Quiz1.html
@@ -70,8 +70,7 @@
       <div>▶</div>
     </div>
     <div class="reveal-content" id="q4-content">
-      <h4>True or False: Everybody who applies draws a signal from the
-same signal urn?</h4>
+      <h4>How are signals determined?</h4>
       {{ form.quiz_q4 }}
       <button type="button" class="check-button btn btn-sm btn-primary"
               onclick="checkAnswer(4)">Check Answer</button>
@@ -99,7 +98,7 @@ same signal urn?</h4>
       <div>▶</div>
     </div>
     <div class="reveal-content" id="q6-content">
-      <h4>Your signal urn is: (select one)</h4>
+      <h4>True or False: It is not possible to get a signal less than your productivity value.</h4>
       {{ form.quiz_q6 }}
       <button type="button" class="check-button btn btn-sm btn-primary"
               onclick="checkAnswer(6)">Check Answer</button>
